# genbase

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  repomix-output.txt
docker/: .dockerignore  docker-compose.yml
docs/: README.md  package-lock.json
docs/app/(home)/: page.tsx
docs/content/docs/: index.mdx
genbase/app/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
genbase/app/app/: globals.css  layout.tsx  page.tsx
genbase/app/components/: chat-panel.tsx  groups-tree.tsx  mode-toggle.tsx  project-switcher.tsx  sidebar.tsx  topbar.tsx  user-nav.tsx  variable-settings.tsx
genbase/app/lib/: api.ts  config.ts  feature-flags.tsx  provider-icons.ts  (+1 more)
genbase/server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
genbase/server/alembic/: env.py
genbase/server/alembic/versions/: 05b6260d347c_add_chat_messages_table.py  2bd21c443aea_initial_migration.py  f274ce0a6623_add_commit_id.py
genbase/server/src/: config.py  database.py  logger.py  main.py  models.py
genbase/server/src/agents/: prompts.py  registry_tools.py  tools.py
genbase/server/src/routers/: README.md  __init__.py  agents.py  chat.py  code.py  groups.py  models.py  operations.py  projects.py  variables.py  workspaces.py
genbase/server/src/schemas/: api.py
genbase/server/src/services/: agent_service.py  chat_service.py  code_service.py  git_service.py  group_service.py  model_service.py  project_service.py  tf_service.py  variable_service.py  workspace_service.py
genbase/server/test/: test_main.py
scripts/: setup.sh
(+23 files in other folders)
